[gd_scene load_steps=11 format=3 uid="uid://0oxqfyv4036f"]

[ext_resource type="Script" uid="uid://bxvdq02u5o72a" path="res://Scripts/menu_scripts/tutorial_pg_2.gd" id="1_ekiwj"]
[ext_resource type="PackedScene" uid="uid://c0id1c01yo1ck" path="res://Scenes/Menus/menutemplate.tscn" id="2_ipwnw"]
[ext_resource type="Shader" uid="uid://4bsp6edg2ace" path="res://Assets/Shaders/pixelate.gdshader" id="3_y0yxr"]
[ext_resource type="FontFile" uid="uid://bqm2v7i516jtc" path="res://Assets/OldeEnglish.ttf" id="4_hm5iq"]
[ext_resource type="FontFile" uid="uid://c1852jjypyisc" path="res://Assets/The Centurion.otf" id="5_rmo7d"]
[ext_resource type="VideoStream" uid="uid://c8phmectqbnn7" path="res://Assets/tutorial screen recordings/coinFlip.ogv" id="6_ekiwj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_epeud"]
shader = ExtResource("3_y0yxr")
shader_parameter/amount = 400

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gqhd8"]
shader = ExtResource("3_y0yxr")
shader_parameter/amount = 300

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpkj0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekiwj"]

[node name="TutorialPg2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekiwj")

[node name="MenuTemplate" parent="." instance=ExtResource("2_ipwnw")]
layout_mode = 1

[node name="Label" type="Label" parent="MenuTemplate"]
material = SubResource("ShaderMaterial_epeud")
layout_mode = 0
offset_left = 416.0
offset_top = 126.0
offset_right = 751.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("4_hm5iq")
theme_override_font_sizes/font_size = 27
text = "Coin Flip"
autowrap_mode = 2

[node name="Label2" type="Label" parent="MenuTemplate"]
layout_mode = 0
offset_left = 420.0
offset_top = 179.0
offset_right = 700.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("5_rmo7d")
text = "When playing a single player game, a coin flip will decide the player who will make the first move. Press space to flip the coin."
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MenuTemplate"]
material = SubResource("ShaderMaterial_gqhd8")
layout_mode = 0
offset_left = 432.0
offset_top = 528.0
offset_right = 696.0
offset_bottom = 571.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="BackButton" type="Button" parent="MenuTemplate/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_rmo7d")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vpkj0")
text = "Back
"

[node name="mainBtn" type="Button" parent="MenuTemplate/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_rmo7d")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ekiwj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ekiwj")
text = "Main Menu
"

[node name="NextButton" type="Button" parent="MenuTemplate/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_rmo7d")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vpkj0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vpkj0")
text = "Next
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer"]
offset_left = 150.0
offset_top = 300.0
offset_right = 430.0
offset_bottom = 475.0
stream = ExtResource("6_ekiwj")
autoplay = true
expand = true
loop = true

[connection signal="mouse_entered" from="MenuTemplate/HBoxContainer/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="MenuTemplate/HBoxContainer/BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="MenuTemplate/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="MenuTemplate/HBoxContainer/mainBtn" to="." method="_on_main_btn_mouse_entered"]
[connection signal="mouse_exited" from="MenuTemplate/HBoxContainer/mainBtn" to="." method="_on_main_btn_mouse_exited"]
[connection signal="pressed" from="MenuTemplate/HBoxContainer/mainBtn" to="." method="_on_main_btn_pressed"]
[connection signal="mouse_entered" from="MenuTemplate/HBoxContainer/NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="MenuTemplate/HBoxContainer/NextButton" to="." method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="MenuTemplate/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
